crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__unique_items.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"type\":\"array\",\"uniqueItems\":true}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                jsonschema::__private::unique_items::is_unique(arr)
            }
            _ => false,
        }
