crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__unique_items_false.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"items\":{\"type\":\"integer\"},\"type\":\"array\",\"uniqueItems\":false}"
expression: is_valid_body(schema)
---
match instance {
            serde_json::Value::Array(arr) => {
                arr.iter()
                    .all(|instance| match instance {
                        serde_json::Value::Number(n) => {
                            jsonschema::__private::types::is_integer(n)
                        }
                        _ => false,
                    })
            }
            _ => false,
        }
