crates/jsonschema-codegen-core/src/snapshots/jsonschema_codegen_core__tests__uri_format_per_call_cache.snap
---
source: crates/jsonschema-codegen-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"format\":\"uri\",\"type\":\"string\"}"
expression: code
---
struct Validator;
#[doc(hidden)]
#[allow(non_snake_case, dead_code, unused_variables, unreachable_code, clippy::all)]
mod __validator_impl {
    use super::*;
    std::thread_local! {
        static __JSONSCHEMA_URI_FORMAT_CACHE : std::cell::RefCell <
        jsonschema::__private::format::Cache > =
        std::cell::RefCell::new(jsonschema::__private::format::Cache::default());
    }
    #[inline]
    fn __cached_uri(s: &str) -> bool {
        __JSONSCHEMA_URI_FORMAT_CACHE
            .with_borrow_mut(|cache| {
                if let Some(&valid) = cache.get(s) {
                    return valid;
                }
                let valid = jsonschema::__private::format::is_valid_uri(s);
                cache.insert(Box::from(s), valid);
                valid
            })
    }
    pub(super) fn is_valid(instance: &serde_json::Value) -> bool {
        __JSONSCHEMA_URI_FORMAT_CACHE.with_borrow_mut(|cache| cache.clear());
        match instance {
            serde_json::Value::String(s) => __cached_uri(s),
            _ => false,
        }
    }
    pub(super) fn validate<'__i>(
        instance: &'__i serde_json::Value,
        __path: &jsonschema::paths::LazyLocation,
    ) -> Option<jsonschema::ValidationError<'__i>> {
        __JSONSCHEMA_URI_FORMAT_CACHE.with_borrow_mut(|cache| cache.clear());
        match instance {
            serde_json::Value::String(s) => {
                if !(__cached_uri(s)) {
                    return Some(
                        jsonschema::__private::error::format(
                            "/format",
                            __path.into(),
                            instance,
                            "uri",
                        ),
                    );
                }
            }
            _ => {
                return Some(
                    jsonschema::__private::error::single_type(
                        "/type",
                        __path.into(),
                        instance,
                        jsonschema::JsonType::String,
                    ),
                );
            }
        }
        None
    }
}
impl Validator {
    pub fn is_valid(instance: &serde_json::Value) -> bool {
        __validator_impl::is_valid(instance)
    }
    pub fn validate<'__i>(
        instance: &'__i serde_json::Value,
    ) -> ::std::result::Result<(), jsonschema::ValidationError<'__i>> {
        match __validator_impl::validate(
            instance,
            &jsonschema::paths::LazyLocation::new(),
        ) {
            Some(e) => Err(e),
            None => Ok(()),
        }
    }
}
